Wed Mar  9 19:20:44 2005  Manish Singh  <yosh@gimp.org>

	* configure.in: Remove inadvertent gail references, require
	Pango 1.9.0

2005-03-09  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Require GLib 2.7.0

2005-03-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwidget.h (struct _GtkWidget): Typo fixes in comments.
	(#169728, Morten Welinder, Owen Taylor)

	* gtk/gtkwidget.c (gtk_widget_add_mnemonic_label): Fix a typo
	in the docs.  (#169729, Morten Welinder)

	* gtk/gtkimage.c (gtk_image_class_init): Fix a typo.

	* gtk/gtkiconview.c (gtk_icon_view_set_model): Queue a resize 
	when the model is unset.  (#169528, Tomislav Jonjic)

2005-03-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkviewport.c (gtk_viewport_class_init): 
	* gtk/gtkuimanager.c (gtk_ui_manager_class_init): 
	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_class_init): 
	* gtk/gtktipsquery.c (gtk_tips_query_class_init): 
	* gtk/gtktext.c (gtk_text_class_init): 
	* gtk/gtkstatusbar.c (gtk_statusbar_class_init): 
	* gtk/gtkspinbutton.c (gtk_spin_button_class_init): 
	* gtk/gtktoggleaction.c (gtk_toggle_action_class_init): 
	* gtk/gtkoptionmenu.c (gtk_option_menu_class_init): 
	* gtk/gtkoldeditable.c (gtk_old_editable_class_init): 
	* gtk/gtkmessagedialog.c (gtk_message_dialog_class_init): 
	* gtk/gtktoolbutton.c (gtk_tool_button_class_init): 
	* gtk/gtktoolitem.c (gtk_tool_item_class_init): 
	* gtk/gtkimage.c (gtk_image_class_init): 
	* gtk/gtkruler.c (gtk_ruler_class_init): 
	* gtk/gtkiconview.c (gtk_icon_view_class_init): 
	* gtk/gtkprogressbar.c (gtk_progress_bar_class_init): 
	* gtk/gtkprogress.c (gtk_progress_class_init): 
	* gtk/gtkmenu.c (gtk_menu_class_init): 
	* gtk/gtkscale.c (gtk_scale_class_init): 
	* gtk/gtkpaned.c (gtk_paned_class_init): 
	* gtk/gtkhandlebox.c (gtk_handle_box_class_init): 
	* gtk/gtkfontbutton.c (gtk_font_button_class_init): 
	* gtk/gtkfontsel.c (gtk_font_selection_class_init): 
	* gtk/gtkfilesel.c (gtk_file_selection_class_init): 