@@ -1,3 +1,9 @@
+2005-03-10  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkdialog.c (gtk_dialog_map): Don't
+	try to focus the default_widget if there is 
+	none.  (#169881, Thomas Leonard)
+
 Wed Mar  9 19:20:44 2005  Manish Singh  <yosh@gimp.org>
 
 	* configure.in: Remove inadvertent gail references, require
